<resources>
    <string name="app_name">RedesSociales</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="correo">usuario@nextuniversity.com</string>
    <string name="inicio">Inicio</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="google">Google Plus</string>
    <string name="twitter">Twitter</string>
    <string name="redes">Mis Redes Sociales</string>

    <string-array name="compartir">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>Google Plus</item>
        <item>Whatsapp</item>
        <item>Messenger</item>
        <item>SMS</item>
    </string-array>

    <string-array name="imagenesFacebook">
        <item>@drawable/ic_notifications</item>
        <item>@drawable/ic_mundo</item>
        <item>@drawable/ic_solicitudes</item>
    </string-array>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="versionweb">Versión Web</string>
    <string name="compartir">Compartir</string>
    <string name="configuracion">Configuración</string>


</resources>
